--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,9 @@ on:
     branches:
       - main
 
-runner: &default-runner
-  runs-on: ubuntu-latest
-
 jobs:
   validate: 
-    <<: *default-runner
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -20,7 +17,7 @@ jobs:
         run: make lint
 
 # deploy:
-#   <<: *default-runner
+#   runs-on: ubuntu-latest
 #   needs: validate
 #   if: github.ref == 'refs/heads/main'
 #   steps:
