--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
 
       - name: lint
         run: make lint
+      
+      - name: test
+        run: make test
 
 # deploy:
 #   runs-on: ubuntu-latest
