--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,11 +45,11 @@ jobs:
       
       - name: version
         run: |
-          local version=$(<VERSION)
-          echo "Creating version: ${version}"
-          sed -i '' -E 's/(obj.version = ")([0-9]+\.[0-9]+\.[0-9]+)(")/\1'"${version}"'\3/' src/init.lua
-          git commit -am "Release ${version}" \
-            && git tag -a ${version} -m "Release ${version}" \
+          SEMVER=$(<VERSION)
+          echo "Creating version: ${SEMVER}"
+          sed -i '' -E 's/(obj.version = ")([0-9]+\.[0-9]+\.[0-9]+)(")/\1'"${SEMVER}"'\3/' src/init.lua
+          git commit -am "Release ${SEMVVER}" \
+            && git tag -a ${SEMVER} -m "Release ${SEMVER}" \
             && git push
 
       - name: build
