--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,13 @@ jobs:
       
       - name: debug
         run: |
-          echo "GitHub ref: ${{ github.ref }}, ${{ github.event_name }}"
+          echo "GitHub ref: ${{ github.ref }}, ${{ github.ref_type }}, ${{ github.event_name }}"
           echo '${{ toJson(github.event) }}' | jq .
 
   release:
     needs: validate
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') 
-    # && github.event.base_ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: checkout
         uses: actions/checkout@v3
